--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -162,7 +162,7 @@
               <select class="select_01" style="width: 100%;" name="options" (change)="saveInhouse(i, inhouse.value)"   #inhouse>
                 <option value="mutation" selected>Mutation</option>
                 <option value="artifacts">Artifacts</option>
-                <option value="benign">Benign</option>
+              <!--    <option value="benign">Benign</option>  -->
               </select>                    
             </td>
            <!-- <td  class="txt_c" (click)="save(i)" *ngIf="checkType(i)"  class="save_mute">
