--- a/src/app/byengri/upload/upload.component.html
+++ b/src/app/byengri/upload/upload.component.html
@@ -26,7 +26,7 @@
                   </div>
                 </div>
               </div>
-              <div class="mt-3 file-list" *ngIf="upload.files">
+              <div class="mt-3 file-list">
                 <div class="card-header">파일 목록</div>
                 <ul class="list-group list-group-flush">
                   <ng-container  *ngFor="let item of uploadfileList">
@@ -37,7 +37,7 @@
             </div>
           </div>
           <!-- <ng-content></ng-content> -->
-          <div>           
+          <div style="margin-top: 10px;">           
                 <button  class="btn btn-button" (click)="onConfirm()" [disabled]="uploadfileList.length < 3">확 인</button>&nbsp;&nbsp;&nbsp;               
                 <button  class="btn btn-button" (click)="onCancel()">취 소</button>             
           </div>
