--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -171,7 +171,7 @@
                #inhouse>
                 <option value="mutation" selected>Mutation</option>
                 <option value="artifacts">Artifacts</option>
-                <option value="benign">Benign</option>
+                <!-- <option value="benign">Benign</option>  --> 
               </select>                    
             </td>
             <td> 
