--- a/src/app/home/components/maindiag/maindiag.component.scss
+++ b/src/app/home/components/maindiag/maindiag.component.scss
@@ -68,3 +68,10 @@ label {
   color: #666666;
   display: inline-block;
 }
+
+.progress-bar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 20;
+}
