--- a/src/app/inhouse/mutation/mutation.component.html
+++ b/src/app/inhouse/mutation/mutation.component.html
@@ -215,17 +215,17 @@
                             </td>
                             <td  class="txt_c"><span *ngIf="status.value === 'R'">{{list.etc1}}</span>
                                 <span class="clr-input" *ngIf="status.value === 'U'">
-                                    <input type="text"  class="clr-input" value="{{list.etc1}}" id="etc{{list.id}}"> 
+                                    <input type="text"  class="clr-input" value="{{list.etc1}}" id="etc1{{list.id}}"> 
                                 </span>                             
                             </td>
                             <td  class="txt_c"><span *ngIf="status.value === 'R'">{{list.etc2}}</span>
                                 <span class="clr-input" *ngIf="status.value === 'U'">
-                                    <input type="text"  class="clr-input" value="{{list.etc2}}" id="etc{{list.id}}"> 
+                                    <input type="text"  class="clr-input" value="{{list.etc2}}" id="etc2{{list.id}}"> 
                                 </span>                             
                             </td>
                             <td  class="txt_c"><span *ngIf="status.value === 'R'">{{list.etc3}}</span>
                                 <span class="clr-input" *ngIf="status.value === 'U'">
-                                    <input type="text"  class="clr-input" value="{{list.etc3}}" id="etc{{list.id}}"> 
+                                    <input type="text"  class="clr-input" value="{{list.etc3}}" id="etc3{{list.id}}"> 
                                 </span>                             
                             </td>
                             <td class="txt_c"><span *ngIf="status.value === 'R'">{{list.igv}}</span>
