--- a/src/app/byengri/pwchange/pwchange.component.html
+++ b/src/app/byengri/pwchange/pwchange.component.html
@@ -55,9 +55,9 @@
                         </div>  
                     </div>
                     <div class="submit-form">
-                        <button class="btn btn-button" [disabled]="!formGroup.valid" (click)="save()">확인</button>
+                        <button class="btn btn_01" [disabled]="!formGroup.valid" (click)="save()">확인</button>
                         &nbsp;&nbsp;
-                        <button class="btn btn-button" (click)="cancel()">취소</button>
+                        <button class="btn btn_01" (click)="cancel()">취소</button>
                     </div>                    
 
                 </div> 
@@ -66,6 +66,7 @@
            </div>
         </section>
      </div> 
+
  
  
  
