--- a/src/app/byengri/byengri/byengri.component.html
+++ b/src/app/byengri/byengri/byengri.component.html
@@ -19,14 +19,14 @@
                     <a routerLink="/pathology" class="active nav-link" routerLinkActive="active"><span
                       class="nav-text"></span></a>
                   </td> 
-                <!--menu enable 21.03.02 -->
+                <!--menu enable 21.03.02 --
                   <td class="menu04">
                     <a routerLink="/pathology/managestatistics"></a>
                   </td> 
                   <td class="menu06">
                     <a routerLink="/pathology/manageusers"></a>
                   </td> 
-                <!---- -->
+                !---- -->
               </tr>
           </table>
       </div>
